// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField should render correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c1 {
  display: block;
  margin-bottom: 2px;
  padding-left: 2px;
  color: #283040;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c2 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #97a4ba;
  outline: none;
  background-color: #ffffff;
  color: #283040;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  border-color: #328ef5;
}

.c2:focus {
  border-color: #328ef5;
  box-shadow: inset 0 0 0 2px #eef1f8;
}

.c2:disabled,
.c2 [disabled] {
  border-color: #97a4ba;
  background-color: #c4cfdd;
  color: #67758d;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #97a4ba;
}

.c2::-moz-placeholder {
  color: #97a4ba;
}

.c2:-ms-input-placeholder {
  color: #97a4ba;
}

.c2::placeholder {
  color: #97a4ba;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="input-id"
  >
    Input
  </label>
  <input
    class="c2"
    id="input-id"
    placeholder="Placeholder"
    value=""
  />
</div>
`;

exports[`FormField should render generated id correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c1 {
  display: block;
  margin-bottom: 2px;
  padding-left: 2px;
  color: #283040;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c2 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #97a4ba;
  outline: none;
  background-color: #ffffff;
  color: #283040;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  border-color: #328ef5;
}

.c2:focus {
  border-color: #328ef5;
  box-shadow: inset 0 0 0 2px #eef1f8;
}

.c2:disabled,
.c2 [disabled] {
  border-color: #97a4ba;
  background-color: #c4cfdd;
  color: #67758d;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #97a4ba;
}

.c2::-moz-placeholder {
  color: #97a4ba;
}

.c2:-ms-input-placeholder {
  color: #97a4ba;
}

.c2::placeholder {
  color: #97a4ba;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="tailor_uid_1"
  >
    Input
  </label>
  <input
    class="c2"
    id="tailor_uid_1"
    placeholder="Placeholder"
    value=""
  />
</div>
`;

exports[`FormField validationMessage should render FormField with error message correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c1 {
  display: block;
  margin-bottom: 2px;
  padding-left: 2px;
  color: #283040;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c3 {
  margin-top: 2px;
  padding-left: 2px;
  color: #ff5757;
  font-size: 0.875rem;
}

.c2 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #97a4ba;
  outline: none;
  background-color: #ffffff;
  color: #283040;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-color: #ff5757 !important;
  box-shadow: none !important;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2:hover {
  border-color: #328ef5;
}

.c2:focus {
  border-color: #328ef5;
  box-shadow: inset 0 0 0 2px #eef1f8;
}

.c2:disabled,
.c2 [disabled] {
  border-color: #97a4ba;
  background-color: #c4cfdd;
  color: #67758d;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #97a4ba;
}

.c2::-moz-placeholder {
  color: #97a4ba;
}

.c2:-ms-input-placeholder {
  color: #97a4ba;
}

.c2::placeholder {
  color: #97a4ba;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="tailor_uid_1"
  >
    Input
  </label>
  <input
    class="c2"
    id="tailor_uid_1"
    placeholder="Placeholder"
    value=""
  />
  <div
    style="height: 22px; opacity: 1;"
  >
    <div
      class="c3"
    >
      Error Message
    </div>
  </div>
</div>
`;
